--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+app.telegram.bot.enable=false
+app.telegram.bot.token=<bot:token>
+
 spring.liquibase.enabled=true
 
 spring.jpa.hibernate.naming-strategy: org.hibernate.cfg.EJB3NamingStrategy
